# cpp_learning

alias/: build.sh
alias/include/: alias_1.h
alias/src/: alias_1.cpp  main.cpp
auto_decltype/include/: autodecltype.h
auto_decltype/src/: autodecltype.cpp  main.cpp
class/include/: auto.h  display.h  main_function.h  utils.h
class/src/: auto.cpp  display.cpp  main.cpp  main_function.cpp
collections/include/: collections.h
collections/src/: array_1.cpp  collections.cpp  main.cpp
constant/: build.sh
constant/include/: constant.h
constant/src/: constant.cpp  main.cpp
dynamic_memory/include/: dyn_mem.h
dynamic_memory/src/: dyn_mem.cpp  main.cpp  vector_1.cpp
functions/: build.sh
functions/include/: functions.h
functions/src/: functions.cpp  main.cpp
inheritance/include/: display.h  test_function.h
inheritance/src/: auto.cpp  test_function.cpp  utils.cpp
iterator/include/: list_1.h
iterator/src/: collections.cpp  list_1.cpp  vector_1.cpp
namespace/include/: namespace_1.h
namespace/src/: main.cpp  namespace_1.cpp
pointers/include/: pointers.h
pointers/src/: main.cpp  pointers.cpp
reference/: CMakeLists.txt
reference/include/: reference.h
reference/src/: main.cpp  reference.cpp
smart_pointer/: CMakeLists.txt
smart_pointer/include/: pointers.h
smart_pointer/src/: main.cpp  pointers.cpp
struct/include/: struct.h  variables.h
struct/src/: main.cpp  struct.cpp  variables.cpp
table/include/: table.h
table/src/: main.cpp  table.cpp
template/include/: array_1.h  template_1.h  vector_1.h
template/src/: array_1.cpp  (+2 more)
(+3 files in other folders)
